<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyAndroidApp</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_appointments">Appointments</string>
    <string name="action_schedule_appointment">Schedule Appointment</string>
    <string name="action_go_to_add_contact">Add new Contacts</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="choice">choice</string>
    <string name="search_hint">Browse User By Username...</string>
    <string name="dialog_delete_contact">Are you sure that you want to delete the above contact?\n\n</string>
    <string name="delete_contact">DELETE</string>
    <string name="cancel">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_date">Date:</string>
    <string name="Format_date">DD/MM/YYYY</string>
    <string name="insert_time">Time:</string>
    <string name="Format_Time">HH:MM</string>
    <string name="insert_address">Adress:</string>
    <string name="Example_Address">Desired Address and Number</string>
    <string name="insert_place">Place:</string>
    <string name="Place_Hint">Specify the Place</string>
    <string name="Insert_subject">Subject:</string>
    <string name="Subject_Hint">Specify the Subject of the Appointment</string>
    <string name="Get_Location">Get Current Location Address</string>
    <string name="Select_Contacts">Select Participants:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Enter Password</string>
    <string name="Username">Enter User Name</string>
    <string name="Login">Log In</string>
    <string name="Register">Register</string>
    <string name="Exit">Exit</string>
    <string name="Re_password">Re-Enter Password</string>
    <string name="Email">Enter Email</string>
    <string name="EnterName">Enter Name</string>
    <string name="EnterLastName">Enter Last Name</string>
    <string name="Back">Back</string>
    <string name="logout">Log out</string>
    <string name="address_label">Address</string>
    <string name="date_label">Date:</string>
    <string name="place_label">Place:</string>
    <string name="time_label">Time:</string>
    <string name="participants_label">Patricipants:</string>
    <string name="Accept">ACCEPT</string>
    <string name="Decline">DECLINE</string>
    <string name="swap_lang">Greek</string>
    <string name="welcome">Welcome to MyAndroidApp</string>
    <string name="pleaseWait">Application Fetching Data. Please Wait</string>
    <string name="quit">Quit</string>
    <string name="NoInternetConnection">Device is not Connected to the Internet</string>
    <string name="InvalidCredentials">Invalid Credentials</string>
    <string name="SensorsDisabled">your location sensors are disabled</string>
    <string name="GPSwait">Please wait while GPS gets location stamp</string>
    <string name="Networkwait">Please wait while your location stamp is received</string>
    <string name="InvalidCharacters">please only use Letters and Numbers</string>
    <string name="invalidDatetime">Invalid Datetime</string>
    <string name="AppointmentScheduled">Appointment has been uploaded successfully</string>
    <string name="AcountExists">Account allready exists</string>
    <string name="AccountCreated">account successfully created</string>
    <string name="UsernameErrorEmpty">Missing Username Field</string>
    <string name="PassErrorEmpty">Missing Password Field</string>
    <string name="RepassErrorEmpty">Missing Password retype Field</string>
    <string name="mailErrorEmpty">Missing Email Field</string>
    <string name="nameErrorEmpty">Missing Name Field</string>
    <string name="surnameErrorEmpty">Missing Surname Field</string>
    <string name="nameErrorChar">Invalid Name Characters found</string>
    <string name="surnameErrorChar">Invalid Surname characters found</string>
    <string name="invalidEmailchar">Invalid Email Characters</string>
    <string name="InsertFields">Please insert Both Fields</string>
    <string name="ErrorMe">You can\'t be Added as Your Contact</string>
    <string name="PleaseEnterText">Please enter an Account Name</string>
    <string name="AlreadyIncluded">Already included on your contacts</string>
    <string name="AddedSuccessfully" >Contact added successfully</string>
    <string name="NoneExists">User not found</string>
    <string name="MissingFields">Missing fields</string>
    <string name="MissingDate">Missing Date Field</string>
    <string name="InvalidAddress">Invalid Address characters found</string>
    <string name="contactsEmpty">Your contacts list is empty.</string>
    <string name="contactsEmptyAdvice">You can start adding contacts to be able to schedule appointments.</string>
</resources>
