<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">



    <include
        layout="@layout/toolbar_fragment"
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_calendar_appointment"
        android:id="@+id/appointment_image"

        android:layout_alignParentLeft="true"
        android:layout_below="@id/main_menu"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/appointment_image"
        android:layout_below="@id/main_menu"
        android:layout_above="@+id/middle"
        android:id="@+id/mainLinear">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        >

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/address_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/address_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/address_Text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="address 123"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/date_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/date_Text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="32/02/2020"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/place_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/place_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/place_Text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="Yolo club"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium">
            <TextView
                android:id="@+id/Time_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/time_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/time_Text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="20:20"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

        </LinearLayout>




    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/middle"
        android:orientation="horizontal"
        android:layout_centerVertical="true"></LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/participants_list"
        android:layout_above="@+id/btn_accept"
        android:layout_below="@id/middle">
        <TextView
            android:id="@+id/participants_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/participants_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ListView
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Accept"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"

            />
        <Button
            android:id="@+id/btn_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Decline"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
            />




</RelativeLayout>